[project]
name = "Beispiel_PDM"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jhumci", email = "julian.huber@mci.edu"},
]
dependencies = ["numpy>=2.2.4"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
